--- a/src/index.css
+++ b/src/index.css
@@ -3,16 +3,20 @@ nav{
   text-align: center;
   justify-content:center;
   background: #6a26cd;
+  padding: 1rem;
 }
 
 nav a{
   margin-left:1rem;
-  color:rgba(255,255,255,0.5);
+  color:white;
 
 }
 nav first-child{
-  margin-left: 0;
+  margin-left: 0.25rem;
 }
 nav a:active{
-  color:white;
+  color:black;
+}
+nav a:hover{
+  color:orange;
 }
